Rewrote more Gradle plugins to java (#15375)
* Initial port of regeneration logic to java. Reimplemented from scratch.

* Cleaning up regen. scripts.

* Remove the original regenerate infra.

* Added support for skipping explicit dependencies of the source regenerate task.

* Fixes to regenerate.javacc

* jflex regeneration.

* Regenerate kuromoji dictionaries.

* Recompile nori.

* Cleaned up unicode-test-classes.

* Cleanup regenerate moman classes.

* Convert snowball regeneration.

* Remove stale checksums.

* Converted jdk jar to checksummed regenerate. Regenerated all checksums.

* Initial rewrite of lucene.validation.jar-checks.gradle.

* Reimplementation of license checks/jar checksums in java.

* Ported one regeneration gradle file to java.

* Revert "Ported one regeneration gradle file to java."

This reverts commit 5353ffdc91022da2ef6929690f58fa63440542f1.

* Correct task name.

--- a/build-tools/build-infra/src/main/groovy/regenerate.forUtil.gradle
+++ b/build-tools/build-infra/src/main/groovy/regenerate.forUtil.gradle
@@ -17,13 +17,14 @@
 
 import org.apache.lucene.gradle.plugins.misc.QuietExec
 
+//
 // Regenerates "ForUtil.java" code used by codecs.
+//
 
 void addGenerateFromPythonTask(Project project, File genDir, String taskName, String pyScript, String javaFile) {
-  var generateTaskProvider = project.getTasks().register(
-      "generate" + taskName + "Internal", QuietExec, {
+  project.getTasks().register(
+      "regenerate" + taskName, QuietExec, {
         description = "Regenerate " + javaFile + " using " + pyScript + " in " + genDir
-        group = "generation"
 
         def genScript = project.file("${genDir}/${pyScript}")
         def genOutput = project.file("${genDir}/${javaFile}")
@@ -34,15 +35,6 @@ void addGenerateFromPythonTask(Project project, File genDir, String taskName, St
         executable = buildGlobals.externalTool("python3")
         args = ['-B', genScript.toString()]
       })
-
-  var wrapped = project.wrapWithPersistentChecksums2(generateTaskProvider, [
-    andThenTasks: ["applyGoogleJavaFormat"],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  project.getTasks().named("regenerate").configure {
-    dependsOn wrapped
-  }
 }
 
 configure(project(":lucene:core")) {
@@ -63,15 +55,24 @@ configure(project(":lucene:backward-codecs")) {
   addGenerateFromPythonTask(project,
       file("src/java/org/apache/lucene/backward_codecs/lucene912"), "ForUtil912", "gen_ForUtil.py", "ForUtil.java")
   addGenerateFromPythonTask(project,
-      file("src/java/org/apache/lucene/backward_codecs/lucene912"), "ForDeltaUtil912", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
+      file("src/java/org/apache/lucene/backward_codecs/lucene912"),
+      "ForDeltaUtil912",
+      "gen_ForDeltaUtil.py",
+      "ForDeltaUtil.java")
 
   addGenerateFromPythonTask(project,
       file("src/java/org/apache/lucene/backward_codecs/lucene101"), "ForUtil101", "gen_ForUtil.py", "ForUtil.java")
   addGenerateFromPythonTask(project,
-      file("src/java/org/apache/lucene/backward_codecs/lucene101"), "ForDeltaUtil101", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
+      file("src/java/org/apache/lucene/backward_codecs/lucene101"),
+      "ForDeltaUtil101",
+      "gen_ForDeltaUtil.py",
+      "ForDeltaUtil.java")
 
   addGenerateFromPythonTask(project,
       file("src/java/org/apache/lucene/backward_codecs/lucene103"), "ForUtil103", "gen_ForUtil.py", "ForUtil.java")
   addGenerateFromPythonTask(project,
-      file("src/java/org/apache/lucene/backward_codecs/lucene103"), "ForDeltaUtil103", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
+      file("src/java/org/apache/lucene/backward_codecs/lucene103"),
+      "ForDeltaUtil103",
+      "gen_ForDeltaUtil.py",
+      "ForDeltaUtil.java")
 }
