--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.lucene.gradle.plugins.publishing.ConfigureMavenPublishingPlugin
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -18,30 +16,22 @@ import org.apache.lucene.gradle.plugins.publishing.ConfigureMavenPublishingPlugi
  */
 
 plugins {
-  // Apply build plugins from the composite build-infra project.
-  // The order of plugins does matter (most of the time).
-  id "lucene.root-project.check-environment"
-
   id "base"
+
+  id "lucene.root-project.check-environment"
   id "lucene.root-project.setup"
-  id "lucene.java-projects.conventions"
 
-  id "lucene.validation.jar-checks"
-
-  id "lucene.regenerate"
-  id "lucene.regenerate.jflex"
-  id "lucene.regenerate.forUtil"
-  id "lucene.regenerate.moman"
-  id "lucene.regenerate.kuromoji"
-  id "lucene.regenerate.nori"
-  id "lucene.regenerate.icu"
-  id "lucene.regenerate.javacc"
-  id "lucene.regenerate.antlr"
-  id "lucene.regenerate.unicode-test-classes"
-  id "lucene.regenerate.snowball"
+  // TODO: move to java.
+  id 'regenerate.forUtil'
+  id 'regenerate.antlr'
+  id 'regenerate.icu'
+  id 'regenerate.javacc'
+  id 'regenerate.jflex'
+  id 'regenerate.kuromoji'
+  id 'regenerate.nori'
+  id 'regenerate.unicode-test-classes'
+  id 'regenerate.moman'
+  id 'regenerate.snowball'
 }
-
-// configure publishing defaults.
-plugins.apply(ConfigureMavenPublishingPlugin.class);
 
 description = 'Grandparent project for Apache Lucene Core'
