--- a/lucene/benchmark-jmh/build.gradle
+++ b/lucene/benchmark-jmh/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
 // Exclude JMH-generated files and certain classes that require incubating classes
 // from forbiddenapis validation.
-tasks.matching { it.name == "forbiddenApisMain" }.configureEach {
+tasks.named("forbiddenApisMain").configure {
   patternSet.exclude(["**/jmh_generated/**"])
 }
 
@@ -62,7 +62,7 @@ tasks.compileJava.configure {
   options.javaModuleMainClass.set("org.apache.lucene.benchmark.jmh.Main")
 }
 
-jar.configure { Jar jarTask ->
+tasks.named("jar").configure {
   dependsOn configurations.runtimeClasspath
 
   manifest {
