Final Gradle plugins to Java (#15377)
* Partial, stopped when realizing gradle sucks.

* Rewrite RegenerateTasksSupportPlugin using after-projects-evaluated hook.

* Moved regeneration code into each subproject's build.gradle.

* Final cleanups.

* Don't complain about errorprone unless 'check' is mentioned explicitly.

* Cleanup deprecated APIs.

* Minor tweaks.

* Use a service instead of the deprecated hook.

* Move project reference outside of the task's execution code.

* Remove obsolete launch configurations.

* Remove exception from close.

--- a/build-tools/build-infra/build.gradle
+++ b/build-tools/build-infra/build.gradle
@@ -17,8 +17,6 @@
 
 plugins {
   id "java-gradle-plugin"
-  id "groovy-gradle-plugin"
-
   alias(deps.plugins.forbiddenapis) apply false
 }
 
@@ -40,14 +38,9 @@ gradlePlugin {
   automatedPublishing = false
 
   plugins {
-    CheckEnvironmentPlugin {
-      id = 'lucene.root-project.check-environment'
-      implementationClass = 'org.apache.lucene.gradle.plugins.misc.CheckEnvironmentPlugin'
-    }
-
     RootProjectSetupPlugin {
       id = 'lucene.root-project.setup'
-      implementationClass = 'org.apache.lucene.gradle.plugins.misc.RootProjectSetupPlugin'
+      implementationClass = 'org.apache.lucene.gradle.plugins.misc.LuceneRootConfigurationPlugin'
     }
   }
 }
