Remove usage of exclusiveContent to be compatible with gradle 9.1

--- a/build-tools/build-infra/ecj-source.gradle
+++ b/build-tools/build-infra/ecj-source.gradle
@@ -24,20 +24,16 @@
 boolean useDropMirrorForEcj = true
 if (useDropMirrorForEcj) {
   repositories {
-    exclusiveContent {
-      forRepository {
-        ivy {
-          url = 'https://s3.amazonaws.com/lucene-testdata/temp-repo/ecj/'
-          patternLayout {
-            artifact "[artifact]-[revision](.[ext])"
-            m2compatible = true
-          }
-          metadataSources {
-            it.artifact()
-          }
-        }
+    ivy {
+      url = 'https://s3.amazonaws.com/lucene-testdata/temp-repo/ecj/'
+      patternLayout {
+        artifact "[artifact]-[revision](.[ext])"
+        m2compatible = true
       }
-      filter {
+      metadataSources {
+        it.artifact()
+      }
+      content {
         includeGroup "org.eclipse.jdt"
       }
     }
