--- a/.github/actions/prepare-for-build/action.yml
+++ b/.github/actions/prepare-for-build/action.yml
@@ -31,6 +31,7 @@ runs:
         java-package: jdk
 
     - name: Cache gradle-wrapper.jar
+      if: ${{ fromJSON(inputs.use-cache) }}
       uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
         path: gradle/wrapper/gradle-wrapper.jar
