--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,5 +24,5 @@
       }
     }
   },
-  "updateContentCommand": "cd ${containerWorkspaceFolder} && rm -f .classpath && ./gradlew eclipse"
+  "updateContentCommand": "cd ${containerWorkspaceFolder} && ./gradlew eclipse"
 }
