--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -35,6 +35,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         java: [ '25' ]
+        compiler: [ gcc ]
 
     runs-on: ${{ matrix.os }}
 
@@ -61,6 +62,8 @@ jobs:
           echo "lucene.tool.ast-grep=ast-grep" >> build-options.local.properties
 
       - name: Run gradle check (without tests)
+        env:
+          CC: ${{ matrix.compiler }}
         run: ./gradlew check -x test "-Ptask.times=true"
 
 
@@ -74,6 +77,7 @@ jobs:
         # Operating systems to run on.
         os: [ ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-latest ]
         java: [ '25' ]
+        compiler: [ gcc ]
         trigger:
           - ${{ github.event_name }}
         exclude:
@@ -108,6 +112,7 @@ jobs:
       - name: Run gradle tests
         run: ./gradlew displayGradleDiagnostics allOptions test "-Ptask.times=true" "-Pvalidation.errorprone=false"
         env:
+          CC: ${{ matrix.compiler }}
           # Set to the defaults to override the "CI"-based logic that would enable C2
           # we can't afford C2 on github runners.
           TEST_JVM_ARGS: "-XX:TieredStopAtLevel=1 -XX:+UseParallelGC -XX:ActiveProcessorCount=1"
