Upgrade ecj to version 3.44.0.

--- a/build-tools/build-infra/ecj-source.gradle
+++ b/build-tools/build-infra/ecj-source.gradle
@@ -21,7 +21,7 @@
 // we redirect dependency resolution to our own s3-based "maven repository" just for
 // the ecj jar.
 
-boolean useDropMirrorForEcj = true
+boolean useDropMirrorForEcj = false
 if (useDropMirrorForEcj) {
   repositories {
     exclusiveContent {
