Add maven mirror
Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,9 @@
 pluginManagement {
     repositories {
         mavenCentral()
+        maven {
+            url "https://maven-central.storage-download.googleapis.com/maven2/"
+        }
         gradlePluginPortal()
     }
 
