--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -24,6 +24,9 @@ plugins {
 
 repositories {
   mavenCentral()
+  maven {
+    url "https://maven-central.storage-download.googleapis.com/maven2/"
+  }
   gradlePluginPortal()
 }
 
