Move repository declarations to one file and reuse.

--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -22,14 +22,7 @@ plugins {
   id "java-gradle-plugin"
 }
 
-repositories {
-  mavenCentral()
-  maven {
-    url "https://maven-central.storage-download.googleapis.com/maven2/"
-  }
-  gradlePluginPortal()
-}
-
+apply from: rootProject.file("build-tools/build-infra/declare-repositories.gradle")
 apply from: rootProject.file("build-tools/build-infra/ecj-source.gradle")
 apply from: rootProject.file("build-tools/build-infra/declare-dependencies.gradle")
 
