--- a/build-tools/build-infra/build.gradle
+++ b/build-tools/build-infra/build.gradle
@@ -20,14 +20,7 @@ plugins {
   alias(deps.plugins.forbiddenapis) apply false
 }
 
-repositories {
-  mavenCentral()
-  maven {
-    url "https://maven-central.storage-download.googleapis.com/maven2/"
-  }
-  gradlePluginPortal()
-}
-
+apply from: file("declare-repositories.gradle")
 apply from: file("ecj-source.gradle")
 
 group = "org.apache"
