--- a/settings.gradle
+++ b/settings.gradle
@@ -16,13 +16,7 @@
  */
 
 pluginManagement {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://maven-central.storage-download.googleapis.com/maven2/"
-        }
-        gradlePluginPortal()
-    }
+    apply from: file("build-tools/build-infra/declare-repositories.gradle"), to: delegate
 
     // the classpath of the included composite project is resolved independently.
     // so custom ecj versions are not found unless we repeat the same code
