--- a/build-tools/build-infra/declare-repositories.gradle
+++ b/build-tools/build-infra/declare-repositories.gradle
@@ -23,7 +23,9 @@ repositories {
   // running on github runners (https://github.com/apache/lucene/issues/15541)
   boolean useGoogleMavenProxy = System.getenv("GITHUB_ACTIONS") != null
   if (useGoogleMavenProxy) {
-    google()
+    google {
+      url "https://maven-central.storage-download.googleapis.com/maven2/"
+    }
   } else {
     mavenCentral()
   }
