Sync github workflow changes with the main branch.

--- a/.github/workflows/mark-stale-PRs.yml
+++ b/.github/workflows/mark-stale-PRs.yml
@@ -10,15 +10,22 @@ on:
   # Or run on demand
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   stale:
+    name: Mark stale PRs
     runs-on: ubuntu-latest
 
     permissions:
-      pull-requests: write
+      pull-requests: write # must comment/label PRs
+      actions: write # must manipulate actions cache to split workload across multiple runs
+
+    timeout-minutes: 15
 
     steps:
-      - uses: actions/stale@v5
+      - name: Run stale PR action
+        uses: actions/stale@997185467fa4f803885201cee163a9f38240193d # v10.1.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
