--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,25 +1,39 @@
 version: 2
 updates:
   - package-ecosystem: github-actions
-    directory: /
+    directories:
+      - "/"
+      - ".github/actions/eclint"
+      - ".github/actions/prepare-for-build"
+    open-pull-requests-limit: 25
     schedule:
-      interval: daily
+      interval: monthly
     commit-message:
       prefix: ci
-    labels: [dependencies]
-    open-pull-requests-limit: 1
-    groups:
-      actions:
-        patterns: ["*"]
+    labels: [dependencies, skip-changelog]
+    cooldown:
+      default-days: 7
 
+  # python dependencies in /dev-tools/scripts
   - package-ecosystem: pip
-    directory: /
+    directory: /dev-tools/scripts/
+    open-pull-requests-limit: 25
     schedule:
-      interval: daily
+      interval: monthly
     commit-message:
       prefix: build(deps)
-    labels:
-      - dependencies
-    groups:
-      pip:
-        patterns: ["*"]
+    labels: [dependencies, skip-changelog]
+    cooldown:
+      default-days: 7
+
+  - package-ecosystem: gradle
+    directory: /
+    open-pull-requests-limit: 25
+    schedule:
+      interval: weekly
+      day: tuesday
+    commit-message:
+      prefix: deps(java)
+    labels: [dependencies, skip-changelog]
+    cooldown:
+      default-days: 7
