--- a/.github/actions/prepare-for-build/action.yml
+++ b/.github/actions/prepare-for-build/action.yml
@@ -5,35 +5,42 @@ name: Prepare Lucene build
 description: Creates a shared setup for other workflows
 
 inputs:
-   java-version:
-     required: false
-     default: "21"
-     description: "The default JDK version to set up."
+  java-version:
+    required: false
+    default: "21"
+    description: "The default JDK version to set up."
 
-   java-distribution:
-     required: false
-     default: "temurin"
-     description: "The default JDK distribution type"
+  java-distribution:
+    required: false
+    default: "temurin"
+    description: "The default JDK distribution type"
+
+  use-cache:
+    required: false
+    default: true
+    description: "Use setup-gradle for dependency caching"
 
 runs:
- using: "composite"
- steps:
+  using: "composite"
+  steps:
     - name: Set up Java (${{ inputs.java-distribution }}, ${{ inputs.java-version }})"
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
       with:
         distribution: ${{ inputs.java-distribution }}
         java-version: ${{ inputs.java-version }}
         java-package: jdk
 
     - name: Cache gradle-wrapper.jar
-      uses: actions/cache@v4
+      if: ${{ fromJSON(inputs.use-cache) }}
+      uses: actions/cache@9255dc7a253b0ccc959486e2bca901246202afeb # v5.0.1
       with:
         path: gradle/wrapper/gradle-wrapper.jar
         key: gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.jar.sha256') }}
 
     # This includes "smart" caching of gradle dependencies.
     - name: Set up Gradle
-      uses: gradle/actions/setup-gradle@v4
+      if: ${{ fromJSON(inputs.use-cache) }}
+      uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
       with:
         # increase expiry time for the temp. develocity token.
         # https://github.com/gradle/actions/blob/main/docs/setup-gradle.md#increasing-the-expiry-time-for-develocity-access-tokens
