--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -62,6 +62,7 @@ jobs:
   checks:
     name: checks without tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
     timeout-minutes: 15
+    needs: lint
 
     strategy:
       matrix:
@@ -100,6 +101,7 @@ jobs:
   tests:
     name: tests (JDK ${{ matrix.java }} on ${{ matrix.os }})
     timeout-minutes: 30
+    needs: lint
 
     strategy:
       matrix:
