--- a/.pre-commit-config.yml
+++ b/.pre-commit-config.yml
@@ -164,6 +164,6 @@ repos:
         language: system
         entry: uv
         args: [ 'run', 'ast-grep', '-c', './gradle/validation/ast-grep/sgconfig.yml', 'scan', '--format', 'github' ]
-        types: [ 'text' ]
+        types_or: [ 'css', 'html', 'java', 'javascript', 'python', 'yaml']
         env:
           UV_PROJECT: dev-tools
