build: python autofix/reformat support

--- a/.pre-commit-config.yml
+++ b/.pre-commit-config.yml
@@ -146,6 +146,50 @@ repos:
           glob:
             - .github/**/*.yml
 
+      - id: ruff-check
+        name: Lint Python
+        language: system
+        entry: uv
+        args: [ 'run', 'ruff', 'check', '--fix', '--force-exclude' ]
+        env:
+          UV_PROJECT: dev-tools
+        types_or: [ python, pyi, jupyter ]
+        # must apply fixes before the formatter applies its fixes
+        require_serial: true
+        exclude:
+          glob:
+            # TODO: fix the issues with these files separately
+            - gradle/regenerate/jflex/htmlentity.py
+            - gradle/regenerate/packed/gen_BulkOperation.py
+            - gradle/regenerate/moman/createLevAutomata.py
+            - lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/**/{gen_ForUtil.py,gen_ForDeltaUtil.py}
+            - lucene/core/src/java/org/apache/lucene/codecs/**/gen_ForUtil.py
+            - lucene/core/src/java/org/apache/lucene/util/automaton/UTF32ToUTF8.py
+            - lucene/core/src/java/org/apache/lucene/util/packed/gen_BulkOperation.py
+            - lucene/core/src/test/org/apache/lucene/util/makeEuroparlLineFile.py
+
+      - id: ruff-format
+        language: system
+        name: Format Python
+        entry: uv
+        args: [ 'run', 'ruff', 'format', '--force-exclude' ]
+        env:
+          UV_PROJECT: dev-tools
+        types_or: [ python, pyi, jupyter ]
+        # must apply fixes after the linter applies its fixes
+        require_serial: true
+        exclude:
+          glob:
+            # TODO: fix the formatting of these files separately
+            - gradle/regenerate/jflex/htmlentity.py
+            - gradle/regenerate/moman/createLevAutomata.py
+            - gradle/regenerate/packed/{gen_BulkOperation.py,gen_Packed64SingleBlock.py}
+            - lucene/backward-codecs/src/java/org/apache/lucene/backward_codecs/**/{gen_ForUtil.py,gen_ForDeltaUtil.py}
+            - lucene/core/src/java/org/apache/lucene/codecs/**/gen_ForUtil.py
+            - lucene/core/src/java/org/apache/lucene/util/packed/{gen_BulkOperation.py,gen_Packed64SingleBlock.py}
+            - lucene/core/src/java/org/apache/lucene/util/automaton/UTF32ToUTF8.py
+            - lucene/core/src/test/org/apache/lucene/util/makeEuroparlLineFile.py
+
       - id: test-ast-grep
         name: Check ast-grep rules
         language: system
